# deid-module

./: .envrc  .gitignore  README.md  justfile
.github/actions/setup-nix/: action.yaml
.github/workflows/: build-images-manifests.yml  publish-helm-chart.yml
docs/: presidio-poc.md  services.md
examples/: requests.md
src/: kustomization.yaml
src/chart/: Chart.yaml  values.yaml
src/chart/conf/: default-analyzer.yaml  default-recognizers.yaml  default.yaml
src/chart/data/: example_map.db
src/chart/templates/: _helpers.tpl  (+17 more)
src/modules/surrogate/: .env.dist  Dockerfile  README.md  generator.py  loader.py  main.py  pyproject.toml
src/modules/surrogate/data/: example_map.json  example_map.jsonl
src/modules/surrogate/src/: generator.py  loader.py  main.py  models.py
src/modules/surrogate/tests/: conftest.py  test_api.py  test_generator.py  test_loader.py
src/modules/surrogate/tests/fixtures/: surrogate_map.jsonl  surrogate_names.csv
src/modules/surrogate/tests/fixtures/names_db/female/: a_group.txt
src/modules/surrogate/tests/fixtures/names_db/male/: a_group.txt
src/modules/surrogate/tests/fixtures/names_db/unisex/: a_group.txt
src/modules/surrogate/tools/scripts/: import-surrogate-map
src/modules/surrogates/: README.md  generator.py  loader.py  main.py  pyproject.toml
src/modules/surrogates/docs/: surrogate-map-cache.md
src/presidio/: configmap.yaml  kustomization.yaml  namespaces.yaml
tests/: minikube_deploy
tools/ci/: setup-git.sh
tools/just/: external.just  image.just  nix.just  secrets.just  test.just
tools/nix/: flake.nix
(+5 files in other folders)
