[project]
name = "surrogate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "gender-guesser>=0.4.0",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.fastapi]
app = "main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
