[project]
name = "surrogates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "fuzzywuzzy>=0.18.0",
    "gender-guesser>=0.4.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[tool.fastapi]
app = "main:app"
